adding page transition

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     
     <div id="about-content" data-role="content">
     	<p>About Content</p>
-    	<a data-role="button" href="about.html">Button</a>
+    	<a data-role="button" data-transition="slide" href="index.html">Button</a>
     </div><!-- /#home-page -->
     
     <div data-role="footer">
