--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <div id="home-content" data-role="content">
     	<p>Content</p>
-    	<a data-role="button" href="about.html">Button</a>
+    	<a data-role="button" data-transition="flip" href="about.html">Button</a>
     </div><!-- /#home-page -->
     
     <div id="footer" data-role="footer">
